# tiker

./: .gitignore  ASTS_analysis_data_2025-06-30.csv  CLAUDE.md  CLEANUP_SUMMARY.md  DASHBOARD_PRO_README.md  DASHBOARD_README.md  DEVELOPMENT_PROGRESS_2025-01-03.md  DEVELOPMENT_ROADMAP.md  FSLR_analysis_data_2025-06-30.csv  JOBY_analysis_data_2025-06-30.csv  LUNR_analysis_data_2025-06-30.csv  OII_analysis_data_2025-06-30.csv  OKLO_analysis_data_2025-06-30.csv  OPERATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PROJECT_STATUS.md  RDW_analysis_data_2025-06-30.csv  README.md  README_portfolio_manager.md  RKLB_analysis_data_2025-06-30.csv  SETUP_GUIDE.md  START_DASHBOARD.bat  SYSTEM_STATUS_SUMMARY.md  TSLA_analysis_data_2025-06-30.csv  activate.sh  ai_integration.py  cache_manager.py  competitor_analysis.py  config.yaml  daily_portfolio_check.bat  dashboard.py  dashboard_enhanced.py  dashboard_fixed.py  dashboard_hybrid.py  dashboard_minimal.py  dashboard_pro.py  dashboard_pro_simplified.py  dashboard_simple.py  dashboard_test.py  dashboard_ultra_simple.py  (+55 more)
.claude/: settings.local.json
cache/: cache_metadata.json  market_data_ASTS_7a484e49.pkl  market_data_LUNR_7a484e49.pkl  market_data_OII_7a484e49.pkl  market_data_RKLB_7a484e49.pkl  market_data_TSLA_7a484e49.pkl
config/: config.yaml
dashboard_archive/: dashboard.py  dashboard_enhanced.py  dashboard_fixed.py  dashboard_minimal.py  dashboard_pro.py  dashboard_pro_simplified.py  dashboard_simple.py  dashboard_test.py  dashboard_ultra_simple.py
data/: tsla_data.csv
docs/: PERFORMANCE_OPTIMIZATION_SUMMARY.md  (+1 more)
(+189 files in other folders)
