[project]
name = "tiker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "mplfinance>=0.12.10b0",
    "mypy>=1.16.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pyyaml>=6.0.2",
    "yfinance>=0.2.65",
]
